2020-01-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Revert 90ee8bcc82d8ebdae0bd286212c21d1138531658

	Moving code to the mailbox-opening thread resulted in calls to
	Gtk from the thread; moving those calls to an idle handler in
	the main thread got things out of order. We need a more radical
	refactoring to get more work done in threads.

	This commit reverses the changes in commit
	90ee8bcc82d8ebdae0bd286212c21d1138531658, while keeping the
	later fixes.

	* src/balsa-index.c (bndx_scroll_on_open_idle),
	(balsa_index_load_mailbox_node):
	* src/main-window.c (bw_real_open_mbnode_idle_cb),
	(bw_real_open_mbnode_thread):

2020-01-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Set messages-loaded

	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_set_threading):
	set messages-loaded when the message tree is successfully restored
	from the cache.

2020-01-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix a few bugs

	* libbalsa/mailbox_local.c
	(libbalsa_mailbox_local_set_threading): thread messages only if
	there are some; otherwise just set messages-threaded;
	* src/balsa-index.c (bndx_scroll_on_open_idle): if the mailbox
	is empty, just show it and return;
	(balsa_index_scroll_on_open): do not special case an empty
	mailbox;
	* src/main-window.c (bw_real_open_mbnode_idle_cb),
	(balsa_window_real_open_mbnode): register open mailbox earlier,
	to avoid a race with an idle handler;
	(bw_real_open_mbnode_thread): add a warning.

2020-01-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Move some more code to a thread

	* src/balsa-index.c (bndx_scroll_on_open_idle): reschedule if
	the tree-view does not yet have a model;
	(balsa_index_scroll_on_open): do not bother scrolling if the
	mailbox is not showing any messages;
	(bndx_load_mailbox_node_idle): new idle handler for doing the
	Gtk-related part of the load;
	(balsa_index_load_mailbox_node): move the Gtk-related part of
	the load to the new idle handler.